TestSuite/errors/err0501.pas
//!Сопоставление с образцом не поддерживается в данном контексте
begin
  (2 is object(var o1)).print;
end.